fix headliner z-index

--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -7,6 +7,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 1;
+
+    &--headliner {
+      z-index: 200;
+    }
 
 
     img {
